--- a/pelican-striped-html5up/templates/index.html
+++ b/pelican-striped-html5up/templates/index.html
@@ -14,14 +14,15 @@
                 </header>
                 <div class="info">
                     <span class="date" datetime="{{ article.date.isoformat() }}"><span class="month">{{ article.date | strftime('%b')  }}</span> <span class="day">{{ article.date | strftime('%d')  }}</span> <span class="month"> {{ article.date | strftime('%Y')  }}</span></span>
-                    <!-- <ul class="stats">
-                                    <li><a href="#" class="icon fa-comment">16</a></li>
-                                    <li><a href="#" class="icon fa-heart">32</a></li>
-                                    <li><a href="#" class="icon fa-twitter">64</a></li>
-                                    <li><a href="#" class="icon fa-facebook">128</a></li>
-                                </ul> -->
+                    <ul class="stats">
+                                   <!-- <li><a href="#" class="icon fa-comment">{{ article.num_comments }}</a></li>
+                                    <li><a href="#" class="icon fa-heart">{{ article.num_heart }}</a></li>
+                                   --> 
+                                    <li><a href="#" class="icon fa-twitter">{{ article.num_twitter }}</a></li>
+                                    <li><a href="#" class="icon fa-facebook">{{ article.num_facebook }}</a></li>
+                                </ul> 
                 </div><!-- /.post-info -->
-                <div class="entry-content"> &nbsp; </div><!-- /.entry-content -->
+                <div class="entry-content"> <h3>{{ article.summary }}</h3> </div><!-- /.entry-content -->
         </article>
 {% endfor %}
 <!-- /#posts-list -->
